# ref

./: .gitignore  .markdownlintignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  package-lock.json  package.json
.asimov/: asimov.json  coding-standards.json  exhaustive.json  freshness.json  green.json  kingship.json  migrations.json  project.yaml  roadmap.yaml  sprint.json  sycophancy.json  warmup.json
.cargo/: audit.toml  config.toml
.claude/: settings.json
.claude/hooks/: pre-compact.sh  session-start.sh
.github/workflows/: ci.yml  release.yml
schemas/: references.v1.schema.json
src/: browser.rs  check_links.rs  extract.rs  fetch.rs  init.rs  lib.rs  main.rs  pdf.rs  refresh_data.rs  scan.rs  schema.rs  update.rs  verify_refs.rs
test-data/: sample.md
tests/: cli_tests.rs
