[package]
name = "royalbit-ref"
version = "1.1.1"
edition = "2021"
authors = ["RoyalBit Inc. <admin@royalbit.ca>"]
description = "RoyalBit Ref - LLM-optimized reference verification toolkit"
license = "Elastic-2.0"
readme = "README.md"
repository = "https://github.com/royalbit/ref"
homepage = "https://royalbit.ca/ref"
keywords = ["cli", "reference", "verification", "llm", "headless-chrome"]
categories = ["command-line-utilities", "web-programming"]

[[bin]]
name = "ref"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-std", "signal", "sync", "time"] }
futures = "0.3"

# Headless Chrome (CDP)
chromiumoxide = { version = "0.7", features = ["tokio-runtime"], default-features = false }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# HTML parsing & readability
scraper = "0.22"
html2text = "0.14"

# Regex for URL extraction
regex = "1.11"

# File globbing
glob = "0.3"

# PDF extraction
pdf-extract = "0.8"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Time
chrono = { version = "0.4", features = ["serde"] }

# URL parsing
url = "2.5"

# Self-update
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.14"
wiremock = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"
